--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_products_list"
+            android:id="@+id/nav_products_fragment"
             android:icon="@drawable/ic_view_list_black_24dp"
             android:title="@string/menu_products" />
         <item
-            android:id="@+id/nav_cart"
+            android:id="@+id/nav_cart_fragment"
             android:icon="@drawable/ic_shopping_cart_black_24dp"
             android:title="@string/menu_cart" />
     </group>
