--- a/app/src/main/res/menu/add_product_menu.xml
+++ b/app/src/main/res/menu/add_product_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_filter"
+        android:id="@+id/action_done"
         android:orderInCategory="100"
-        android:title="@string/action_filter"
+        android:title="@string/action_done"
         app:showAsAction="always" />
 </menu>
