--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,31 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_products_list">
+    app:startDestination="@+id/nav_products_fragment">
 
     <fragment
-        android:id="@+id/nav_products_list"
+        android:id="@+id/nav_products_fragment"
         android:name="com.example.retailstore.ui.products.ProductsFragment"
         android:label="@string/menu_products"
         tools:layout="@layout/fragment_products">
         <action
             android:id="@+id/action_nav_products_list_to_nav_product_details"
-            app:destination="@id/nav_product_details" />
+            app:destination="@id/nav_product_details_fragment" />
     </fragment>
     
     <fragment
-        android:id="@+id/nav_cart"
+        android:id="@+id/nav_cart_fragment"
         android:name="com.example.retailstore.ui.cart.CartFragment"
         android:label="@string/menu_cart"
         tools:layout="@layout/fragment_cart">
         <action
             android:id="@+id/action_nav_cart_to_nav_product_details"
-            app:destination="@id/nav_product_details" />
+            app:destination="@id/nav_product_details_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/nav_product_details"
+        android:id="@+id/nav_product_details_fragment"
         android:name="com.example.retailstore.ui.productdetails.ProductDetailsFragment"
         android:label="@string/menu_products"
-        tools:layout="@layout/fragment_send" />
+        tools:layout="@layout/fragment_product_details" />
+
+    <fragment
+        android:id="@+id/nav_add_product_fragment"
+        android:name="com.example.retailstore.ui.products.AddProductFragment"
+        android:label="@string/add_product_title"
+        tools:layout="@layout/fragment_add_product" />
 </navigation>
