--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="default_margin"> 4dp </dimen>
+    <dimen name="default_medium_margin"> 8dp </dimen>
     <dimen name="default_padding"> 2dp </dimen>
     <dimen name="cardview_radius"> 4dp </dimen>
     <dimen name="cardview_elevation"> 2dp </dimen>
