--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="@dimen/default_medium_margin"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:text="dsadsadsadsadsa"
+        android:text="@string/product_name_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,8 +35,7 @@
         android:layout_marginEnd="@dimen/default_medium_margin"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:text="dsadsadsadsadsa"
-
+        android:text="@string/product_price_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product_name" />
 
@@ -45,7 +44,7 @@
         android:id="@+id/product_price_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:hint="@string/product_price_text"
         app:layout_constraintTop_toBottomOf="@id/product_name_edit"
         app:layout_constraintLeft_toRightOf="@id/product_price"/>
